--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - images/theme_1.webp
+    - images/theme_2.webp
+    - images/theme_3.webp
+    - images/theme_4.webp
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
