--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/theme_1.webp
-    - images/theme_2.webp
-    - images/theme_3.webp
-    - images/theme_4.webp
+    - images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
